<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:background="#2060A7"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    tools:ignore="ContentDescription" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:paddingTop="30dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_footer"
                    tools:ignore="ContentDescription" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:src="@drawable/ic_logo"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/btn_qrcode"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_btn"
                    tools:layout_editor_absoluteX="9dp"
                    tools:layout_editor_absoluteY="26dp">

                    <ImageView
                        android:id="@+id/img_1"
                        android:src="@drawable/ic_qr_code"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/btn_show_qrcode"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_go_out"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_btn"
                    tools:layout_editor_absoluteX="9dp"
                    tools:layout_editor_absoluteY="26dp">

                    <ImageView
                        android:id="@+id/img_2"
                        android:src="@drawable/ic_logout"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/btn_exit_home"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_see_pdf"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_btn"
                    tools:layout_editor_absoluteX="9dp"
                    tools:layout_editor_absoluteY="26dp">

                    <ImageView
                        android:id="@+id/img_3"
                        android:src="@drawable/ic_attestation"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/btn_show_pdf"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_website"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_btn"
                    tools:layout_editor_absoluteX="9dp"
                    tools:layout_editor_absoluteY="26dp">

                    <ImageView
                        android:id="@+id/img_4"
                        android:src="@drawable/ic_search_engine"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/btn_website_official"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    tools:layout_editor_absoluteX="9dp"
                    tools:layout_editor_absoluteY="26dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/rappel1"
                        android:textColor="@color/colorAccent"
                        android:textAllCaps="false"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_set_profile"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_btn"
                    tools:layout_editor_absoluteX="9dp"
                    tools:layout_editor_absoluteY="26dp">

                    <ImageView
                        android:id="@+id/img_5"
                        android:src="@drawable/ic_user"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/btn_my_info"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>